Fix spacing between slides.

--- a/app/assets/stylesheets/pension.scss
+++ b/app/assets/stylesheets/pension.scss
@@ -670,11 +670,7 @@ nav {
       width: 100%;
       height: 100%;
       white-space: normal;
-      margin: 0 -4px 0 0;
       padding: 10px 0 0 0;
-      @include screen-format(mobile) {
-        margin: 0 -3px 0 0;
-      }
     }
   }
 }
